--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <script type="text/javascript" src="javascripts/index.js"></script>
-    </body>
-    
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Student Homework Tracker</title>
+    <link rel="stylesheet" href="javascripts/index.js" />
+  </head>
+  <body>
+  </body>
 </html>
