Link CSS to HTML file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Student Homework Tracker</title>
     <link rel="stylesheet" href="javascripts/index.js" />
+    <link rel="stylesheet" href="stylesheets/index.css" />
   </head>
   <body>
   </body>
