Changed index.js to source and move to body section in HTML

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Student Homework Tracker</title>
-    <link rel="stylesheet" href="javascripts/index.js" />
     <link rel="stylesheet" href="stylesheets/index.css" />
   </head>
   <body>
+    <script type="text/javascript" src="javascripts/index.js"></script>
   </body>
 </html>
