Add title to HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="stylesheets/index.css" />
   </head>
   <body>
+    <div id="tracker-header">
+      <h1>Homework Tracker</h1> 
+    </div>
     <script type="text/javascript" src="javascripts/index.js"></script>
   </body>
 </html>
