added form for HW tracker

--- a/index.html
+++ b/index.html
@@ -9,6 +9,51 @@
     <div id="tracker-header">
       <h1>Homework Tracker</h1> 
     </div>
+    <hr>
+    <div class="container" style="display: block;">
+      <form class = "add-hw-tasks">
+        <h4>Create your own Homework Reminder!</h4>
+        <input
+          type="text"
+          name="classSubject"
+          value=""
+          placeholder="Enter subject"
+          class="input-text"
+        />
+        <br />
+        <input
+          type="text"
+          name="title"
+          value=""
+          placeholder="Enter title"
+          class="input-text"
+        />
+        <br />
+        <input
+          type="text"
+          name="dueDate"
+          value=""
+          placeholder="Enter due date"
+          class="input-text"
+        />
+        <br />
+        <input
+          type="text"
+          name="instructions"
+          value=""
+          placeholder="Enter instructions"
+          class="input-text"
+        />
+        <br />
+        <input
+        type="submit"
+        name="submit"
+        value="Create Assignment"
+        class="submit"
+      />
+      </form>
+
+    </div>
     <script type="text/javascript" src="javascripts/index.js"></script>
   </body>
 </html>
