Add div task collection to HTML

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         class="submit"
       />
       </form>
-
     </div>
+    <div id="task-collection"></div>
     <script type="text/javascript" src="javascripts/index.js"></script>
   </body>
 </html>
