CSS is added for header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylesheets/index.css"/>
   </head>
   <body>
-    <div id="tracker-header">
+    <div id="tracker-header" class = 'center'>
       <h1>Homework Tracker</h1> 
     </div>
     <hr>
